добавлена возможность выполнить запрос
