# internal/entity/query.go
@@ -1,0 +1,8 @@
+package entity
+
+import "datapointbackend/pkg/database"
+
+type Query struct {
+	SourceId string `json:"sourceId"`
+	database.Query
+}
